--- a/css/styles.css
+++ b/css/styles.css
@@ -218,6 +218,31 @@ body {
   box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.08);
   box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
 }
+/* modal window */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+.backdrop.is-hidden {
+  opacity: 0.5;
+  pointer-events: none;
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 528px;
+  min-height: 581px;
+  background-color: var(--primary-white-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
 /* section */
 .section {
   padding-top: 94px;
@@ -293,6 +318,28 @@ body {
 .employments-item:not(:last-child) {
   margin-right: 30px;
   width: 370px;
+}
+.employments-item {
+  position: relative;
+}
+.employments-about {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 70px;
+  background: rgba(47, 48, 58, 0.8);
+}
+.employments-about-text {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--primary-white-color);
 }
 /* team */
 .team-about {
@@ -535,6 +582,7 @@ body {
 .cards-img {
 }
 .portfolio-item {
+  position: relative;
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
@@ -550,9 +598,31 @@ body {
   margin-bottom: 0;
 }
 .box {
+  /* display: block; */
   border-bottom: 1px solid rgba(238, 238, 238, 1);
   border-left: 1px solid rgba(238, 238, 238, 1);
   border-right: 1px solid rgba(238, 238, 238, 1);
   box-sizing: border-box;
   padding: 20px 24px;
+}
+.portfolio-about-discription {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 294px;
+  background-color: rgba(33, 150, 243, 0.9);
+}
+.portfolio-about-text {
+  width: 322px;
+  height: 168px;
+  font-size: 18px;
+  line-height: 1.56;
+  color: var(--primary-white-color);
+}
+.portfolio-about-discription:hover .portfolio-about-link {
+  display: block;
 }
