--- a/css/styles.css
+++ b/css/styles.css
@@ -558,7 +558,7 @@ body {
 }
 
 .portfolio.list img {
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
 .portfolio.list h3 {
   margin-top: 0;
@@ -576,8 +576,10 @@ body {
 .cards-item {
 }
 .cards-link {
-  display: inline-block;
+  display: block;
   text-decoration: none;
+}
+.cards-link {
 }
 .cards-img {
 }
@@ -586,10 +588,11 @@ body {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
+  outline: 2px solid tomato;
 }
 .cards-link:hover,
 .cards-link:focus {
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
 }
 .portfolio-item:nth-child(3n) {
   margin-right: 0;
@@ -606,15 +609,19 @@ body {
   padding: 20px 24px;
 }
 .portfolio-about-discription {
+  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
-  bottom: 0;
+  top: 0;
   left: 0;
   width: 100%;
   height: 294px;
   background-color: rgba(33, 150, 243, 0.9);
+  /* display: none; */
+}
+.portfolio-about-discription:hover .portfolio-about-link {
+  display: block;
 }
 .portfolio-about-text {
   width: 322px;
@@ -622,7 +629,8 @@ body {
   font-size: 18px;
   line-height: 1.56;
   color: var(--primary-white-color);
+  text-decoration: none;
 }
-.portfolio-about-discription:hover .portfolio-about-link {
-  display: block;
+.portfolio-about-discription a {
+  text-decoration: none;
 }
