--- a/css/styles.css
+++ b/css/styles.css
@@ -618,9 +618,9 @@ body {
   width: 100%;
   height: 294px;
   background-color: rgba(33, 150, 243, 0.9);
-  /* display: none; */
+  display: none;
 }
-.portfolio-about-discription:hover .portfolio-about-link {
+.portfolio-item:hover .portfolio-about-discription {
   display: block;
 }
 .portfolio-about-text {
