--- a/css/styles.css
+++ b/css/styles.css
@@ -533,6 +533,9 @@ body {
 }
 
 /* portfolio */
+.article {
+  display: flex;
+}
 .list-title-portfolio {
   color: var(--title-text-color);
   font-weight: 700;
@@ -588,10 +591,10 @@ body {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
-  outline: 2px solid tomato;
+  /* outline: 2px solid tomato; */
 }
-.cards-link:hover,
-.cards-link:focus {
+.portfolio-item:hover .cards-link,
+.portfolio-item:focus .cards-link {
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
 }
 .portfolio-item:nth-child(3n) {
