--- a/css/styles.css
+++ b/css/styles.css
@@ -112,6 +112,19 @@ body {
 .site-nav .link.current {
   color: var(--accent-color);
 }
+.link.current {
+  position: relative;
+}
+.link.current::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-color);
+}
 .contacts {
   display: flex;
 }
