--- a/css/styles.css
+++ b/css/styles.css
@@ -624,7 +624,6 @@ body {
 }
 .portfolio-about-discription {
   position: absolute;
-  transform: translateY(100%);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -633,8 +632,10 @@ body {
   width: 100%;
   height: 294px;
   background-color: rgba(33, 150, 243, 0.9);
+  transform: translateY(100%);
   opacity: 0;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 500ms;
 }
 .portfolio-item:hover .portfolio-about-discription {
   opacity: 1;
