--- a/css/styles.css
+++ b/css/styles.css
@@ -634,7 +634,7 @@ body {
   background-color: rgba(33, 150, 243, 0.9);
   transform: translateY(100%);
   opacity: 0;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 500ms;
 }
 .portfolio-item:hover .portfolio-about-discription {
