--- a/css/styles.css
+++ b/css/styles.css
@@ -604,8 +604,8 @@ body {
   margin-right: 30px;
   margin-bottom: 30px;
 }
-.portfolio-item:hover .cards-link,
-.portfolio-item:focus .cards-link {
+.portfolio-item:hover,
+.portfolio-item:focus {
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
 }
 .portfolio-item:nth-child(3n) {
