--- a/css/styles.css
+++ b/css/styles.css
@@ -124,6 +124,7 @@ body {
   width: 100%;
   height: 4px;
   background-color: var(--accent-color);
+  border-radius: 2px;
 }
 .contacts {
   display: flex;
