--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,7 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .site-nav a:hover,
 .site-nav a:focus {
@@ -144,7 +144,7 @@ body {
   justify-content: center;
 }
 .contacts a {
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contacts a:hover,
 .contacts a:focus {
@@ -247,7 +247,7 @@ body {
   font-size: 16px;
   line-height: 1.62;
   font-family: Roboto;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button.filter:hover,
 .button.filter:focus {
@@ -399,7 +399,7 @@ body {
   height: 44px;
   border-radius: 50%;
   background-color: var(--primary-white-color);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-icons-link:hover .social-icons-svg,
 .social-icons-link:focus .social-icons-svg {
@@ -448,7 +448,7 @@ body {
   width: 106px;
   height: 60px;
   fill: rgba(175, 177, 184, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .our-clients-item:not(:last-child) {
   margin-right: 30px;
@@ -491,7 +491,7 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-item:not(:last-child) {
   margin-bottom: 9px;
@@ -540,10 +540,10 @@ body {
   height: 44px;
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-social-icons-link .footer-social-icons-svg {
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social-icons-link:hover .footer-social-icons-svg,
@@ -551,14 +551,14 @@ body {
   width: 20px;
   height: 20px;
   fill: rgba(255, 255, 255, 1);
-  background: rgba(33, 150, 243, 1);
+  background-color: rgba(33, 150, 243, 1);
 }
 .footer-social-icons-link:hover,
 .footer-social-icons-link:focus {
   width: 44px;
   height: 44px;
   border-radius: 50%;
-  background: rgba(33, 150, 243, 1);
+  background-color: rgba(33, 150, 243, 1);
 }
 
 /* portfolio */
